--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,28 @@
     <version>1.0.0-SNAPSHOT</version>
     <name>${project.groupId}:${project.artifactId}</name>
 
+    <developers>
+        <developer>
+            <name>Eugene Nosenko</name>
+            <email>eugenenosenko@gmail.com</email>
+            <organization>bitwise sp. z.o.</organization>
+            <url>https://github.com/eugenenosenko</url>
+        </developer>
+    </developers>
+
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <scm>
+        <url>https://github.com/eugenenosenko/maven-conventional-changelog</url>
+        <developerConnection>scm:git:https://github.com/eugenenosenko/maven-conventional-changelog.git
+        </developerConnection>
+        <tag>HEAD</tag>
+    </scm>
     <properties>
         <!--        KOTLIN CONFIGURATION-->
         <kotlin.code.style>official</kotlin.code.style>
@@ -16,6 +38,8 @@
         <kotlin.arg.jvm-jsr>-Xjsr305=strict</kotlin.arg.jvm-jsr>
         <kotlin.version>1.4.10</kotlin.version>
         <kotlin.jvmTarget>11</kotlin.jvmTarget>
+        <junit-jupiter-api.version>5.7.0</junit-jupiter-api.version>
+        <hamcrest.version>2.1</hamcrest.version>
     </properties>
     <dependencies>
         <dependency>
@@ -32,13 +56,13 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.7.0</version>
+            <version>${junit-jupiter-api.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
-            <version>2.1</version>
+            <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -47,7 +71,7 @@
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
-                <version>1.4.0</version>
+                <version>${kotlin.version}</version>
                 <executions>
                     <execution>
                         <id>compile</id>
